feat: h2 sqllist